fixing les paul link

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               href="#"
               >Fender Stratocaster</a
             >
-            <a class="nav-item nav-link" id="lespaul_link" onclick="loadPage('Les Paul.html')" href="#"
+            <a class="nav-item nav-link" id="lespaul_link" onclick="loadPage('lespaul.html')" href="#"
               >Gibson Les Paul</a
             >
           </div>
