--- a/rickenbacker.html
+++ b/rickenbacker.html
@@ -1,1 +1,5 @@
 <h1>This is my Rickenbacker guitar</h1>
+
+<div class="text-center">
+  <img src="rickenbacker.jpeg" class="rounded" alt="1996 Rickenbacker 360">
+</div>
