--- a/rickenbacker.html
+++ b/rickenbacker.html
@@ -1,5 +1,5 @@
 <h1>This is my Rickenbacker guitar</h1>
 
-<div class="text-center">
+<div>
   <img src="./Rickenbacker360.jpeg" class="rounded" alt="1996 Rickenbacker 360">
 </div>
