--- a/rickenbacker.html
+++ b/rickenbacker.html
@@ -1,4 +1,4 @@
 <h1>This is my Rickenbacker guitar</h1>
 
-<img src="./Rickenbacker360.jpeg" class="rounded" alt="1996 Rickenbacker 360">
+<img src="./Rickenbacker360.jpg" class="rounded" alt="1996 Rickenbacker 360">
 
