--- a/rickenbacker.html
+++ b/rickenbacker.html
@@ -1,6 +1,6 @@
 <h1>This is my Rickenbacker guitar</h1>
 
-<img class=profilepic src=".Rickenbacker360.jpg"
+<img class=profilepic src="./Rickenbacker360.jpg"
      width="300"
      height="300"
      margin: left;
