adding info and photo

--- a/fender.html
+++ b/fender.html
@@ -1,1 +1,9 @@
-<h1>This is my Fender Stratocaster guitar</h1>
+<h1>This is my Fender Eric Johnson Signature Stratocaster </h1>
+
+<img class=profilepic src="./fender.jpg"
+     width="300"
+     height="300"
+     margin: left;
+     />
+<br><br>
+<h3> Bringing to life the vision of one of the most respected guitarists in the world, the Eric Johnson Signature Stratocaster Thinline is the perfect marriage between a semi-hollow body and a traditional Stratocaster. Johnson's search for his ideal tone is famous in guitar circles. Liquid and articulate, the sound perfectly complements the playing style that earned his place in the modern guitar pantheon.
