adding photo and text

--- a/lespaul.html
+++ b/lespaul.html
@@ -1,1 +1,10 @@
-<h1>This is my Gibson Les Paul Deluxe guitar</h1>
+
+<h1>This is my Gibson Les Paul Deluxe</h1>
+
+<img class=profilepic src="lespaul.jpg"
+     width="300"
+     height="300"
+     margin: left;
+     />
+<br><br>
+<h3> "Good as gold" is a phrase that gets thrown around a lot, but with the looks and tone of the original on full display, the Gibson Les Paul Deluxe Goldtop should be defined as its own precious metal. The iconic gold-on-maple top is complemented by a lustrous mahogany body and neck for days of sustain to beef up that hot pair of mini humbuckers. A modern classic.
