--- a/fender.html
+++ b/fender.html
@@ -1,6 +1,6 @@
 <h1>This is my Fender Eric Johnson Signature Stratocaster </h1>
 
-<img class=profilepic src="fender.jpg"
+<img class=profilepic src="Strat.jpg"
      width="300"
      height="300"
      margin: left;
