--- a/rickenbacker.html
+++ b/rickenbacker.html
@@ -1,6 +1,6 @@
 <h1>This is my Rickenbacker guitar</h1>
 
-<img class=profilepic src="https://github.com/drewsmyser/guitars/blob/743f9c0f9d5ab3239bced2f584c94a2f99b11ad4/Rickenbacker360.jpg"
+<img class=profilepic src="guitars/Rickenbacker360.jpg"
      width="300"
      height="300"
      margin: left;
